# blindsighted

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: development-build.yml  manual-build.yml  pr-checks.yml  release.yml
agents/: .env.example  README.md  __init__.py  config.py  example_agent.py  pyproject.toml  shelf_assistant.py  test_gemini.py  vision_agent.py
api/: .env.example  .gitignore  CSV_SETUP.md  Dockerfile  ENDPOINT_URLS.md  README.md  TROUBLESHOOTING.md  alembic.ini  config.py  database.py  docker-compose.yml  generate_ssl_cert.ps1  generate_ssl_cert.sh  main.py  models.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 604e0a843889_add_user_and_lifelogentry_models_for_.py  6ce552ddfa11_separate_files_from_lifelog_entries.py  a1b2c3d4e5f6_add_csv_files_table.py  b2c3d4e5f6g7_add_user_choices_table.py  bf9373a6baa1_rename_r2_fields_to_storage_fields_in_.py  ca4b539aef90_initial_migration_with_stream_sessions_.py  e4e6f88cabb0_add_agent_id_and_segments_table.py  f1673e6f9d52_change_video_hash_unique_constraint_to_.py
api/clients/: gemini.py  openrouter.py  r2.py
api/routers/: csv_files.py  lifelog.py  photos.py  preview.py  sessions.py  user_choice.py
api/scripts/: seed_lifelog.py  upload_preview_videos.py
api/services/: lk.py  tts.py
app/: App.tsx  app.json  package.json
app/ios/: Podfile.properties.json
app/src/hooks/: useDebounce.ts
ios/: .gitignore  Config.xcconfig.example  README.md
ios/Blindsighted/: BlindsightedApp.swift  Info.plist
ios/Blindsighted.xcodeproj/: project.pbxproj
ios/Blindsighted/Utils/: APIClient.swift  LifelogSyncManager.swift  LiveKitConfig.swift  LiveKitManager.swift  PhotoFileManager.swift  PreviewVideoSeeder.swift  TimeUtils.swift  VideoFileManager.swift  VideoRecorder.swift
ios/Blindsighted/ViewModels/: DebugMenuViewModel.swift  LifelogViewModel.swift  PhotoGalleryViewModel.swift  StreamSessionViewModel.swift  VideoGalleryViewModel.swift  WearablesViewModel.swift
ios/Blindsighted/Views/: DebugMenuView.swift  HomeScreenView.swift  LifelogView.swift  LiveKitSettingsView.swift  MainAppView.swift  NonStreamView.swift  PhotoGalleryView.swift  PhotoPreviewView.swift  (+5 more)
(+12 files in other folders)
