[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "julie-agents"
version = "0.1.0"
description = "Julie - Gemini-powered shelf assistant for visually impaired supermarket shopping"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
]

[tool.setuptools]
py-modules = ["config", "shelf_assistant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
